--- a/dji_gazebo/CMakeLists.txt
+++ b/dji_gazebo/CMakeLists.txt
@@ -4,11 +4,21 @@ project(dji_gazebo)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
+
+
+find_package(gazebo REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
 )
+
+include_directories(${GAZEBO_INCLUDE_DIRS}, include)
+link_directories(${GAZEBO_LIBRARY_DIRS})
+list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
+
+add_library(contact SHARED src/ContactPlugin.cpp)
+target_link_libraries(contact ${GAZEBO_libraries})
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
