--- a/g2_control/CMakeLists.txt
+++ b/g2_control/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(g2_control)
+add_definitions(-std=c++11)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -11,12 +13,14 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 find_package(PCL 1.7 REQUIRED)
+find_package(gazebo REQUIRED)
 
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${Eigen_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
+  ${GAZEBO_INCLUDE_DIRS}
 )
 
 catkin_package(
@@ -25,12 +29,13 @@ catkin_package(
   DEPENDS PCL
 )
 
+link_directories(${GAZEBO_LIBRARY_DIRS})
 
 add_library(g2_control src/g2_control.cpp)
-target_link_libraries(g2_control ${catkin_LIBRARIES} ${PCL_LIBRARIES} )
+target_link_libraries(g2_control ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${GAZEBO_LIBRARIES} )
 
 add_executable(g2_control_node src/g2_control_node.cpp)
-target_link_libraries(g2_control_node g2_control  )
+target_link_libraries(g2_control_node g2_control )
 
 install(DIRECTORY config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
