--- a/g2_control/package.xml
+++ b/g2_control/package.xml
@@ -15,6 +15,8 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl</build_depend>
   <build_depend>pcl_conversions</build_depend>
+  <build_depend>gazebo</build_depend>
+  
 
   <run_depend>tf</run_depend>
   <run_depend>laser_geometry</run_depend>
@@ -25,6 +27,7 @@
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl</run_depend>
   <run_depend>rqt_gui</run_depend>
+  <run_depend>gazebo</run_depend>
   <run_depend>effort_controllers</run_depend>
 
 
