--- a/dji_gazebo/package.xml
+++ b/dji_gazebo/package.xml
@@ -50,6 +50,8 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
+      <gazebo_ros gazebo_model_path="${prefix}/models"/>
+      <gazebo_ros gazebo_media_path="${prefix}/models"/>
     <!-- Other tools can request additional information be placed here -->
 
   </export>
