--- a/robot_control/CMakeLists.txt
+++ b/robot_control/CMakeLists.txt
@@ -123,7 +123,8 @@ include_directories(
 )
 
 ## Declare a C++ library
-add_library(robot src/robot.cpp)
+add_library(robot_accel src/robot_control_accel.cpp)
+# add_library(robot_accel src/robot_control_accel.cpp)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -131,13 +132,19 @@ add_library(robot src/robot.cpp)
 # add_dependencies(trajectory_control ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-add_executable(robot_control_node src/robot_control_node.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(trajectory_control_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(robot_control_node robot ${catkin_LIBRARIES})
+
+
+#add_executable(robot_control_node src/robot_control_node.cpp)
+#target_link_libraries(robot_control_node robot ${catkin_LIBRARIES})
+
+add_executable(robot_control_accel_node src/robot_control_accel_node.cpp)
+target_link_libraries(robot_control_accel_node robot_accel ${catkin_LIBRARIES})
 
 add_executable(js_control_node src/js_control_node.cpp)
 target_link_libraries(js_control_node ${catkin_LIBRARIES})
+
